--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
-  "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.2.0"
-  }
+  "@types/express": "^4.17.13",
+  "@typescript-eslint/eslint-plugin": "^5.57.0",
+  "@typescript-eslint/parser": "^5.57.0",
+  "eslint": "^8.37.0",
+  "eslint-config-airbnb": "^19.0.4",
+  "eslint-config-prettier": "^8.8.0",
+  "eslint-plugin-import": "^2.27.5",
+  "eslint-plugin-jsx-a11y": "^6.7.1",
+  "eslint-plugin-prettier": "^4.2.1",
+  "eslint-plugin-react": "^7.32.2",
+  "prettier": "^2.8.7"
 }
