--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@types/cors": "^2.8.13"
   },
   "dependencies": {
-    "@types/morgan": "^1.9.4"
+    "@types/morgan": "^1.9.4",
+    "morgan": "^1.10.0"
   }
 }
